Add participant details tab
Move various fields out of the 'Appointment' tab and into the
'Participant' tab, with 'Personal details' and 'Contact details' cards.

Remove the separate 'Participant details' page.

--- a/manage_breast_screening/participants/jinja2/components/participant-details/macro.jinja
+++ b/manage_breast_screening/participants/jinja2/components/participant-details/macro.jinja
@@ -1,4 +1,4 @@
-{% macro participant_details(presented_participant, presented_mammograms, return_url=none, full_details=false, screening_protocol=none) %}
+{% macro participant_details(presented_participant, presented_mammograms, return_url=none, full_details=true, screening_protocol=none) %}
   {% if return_url is none %}
     {{ raise('return_url is required') }}
   {% endif %}
