--- a/manage_breast_screening/participants/jinja2/components/participant-details/contact_details.jinja
+++ b/manage_breast_screening/participants/jinja2/components/participant-details/contact_details.jinja
@@ -1,17 +1,8 @@
 {% from "nhsuk/components/card/macro.jinja" import card %}
 {% from "nhsuk/components/summary-list/macro.jinja" import summaryList %}
+{% from "components/participant-details/summary_list_rows.jinja" import address_html %}
 
 {% macro contact_details(presented_participant) %}
-  {% set address_html %}
-    {% if presented_participant.address %}
-      {% for line in presented_participant.address.lines %}
-        {{ line }}{% if not loop.last %}<br>{% endif %}
-      {% endfor %}
-      {% if presented_participant.address.postcode %}
-        <br>{{ presented_participant.address.postcode }}
-      {% endif %}
-    {% endif %}
-  {% endset %}
   {% call card({
     "heading": "Contact details"
   }) %}
@@ -22,7 +13,7 @@
             "text": "Address"
           },
           "value": {
-            "html": address_html
+            "html": address_html(presented_participant)
           }
         },
         {
