temporary workaround for bug in card component
The card component doesn't recognise empty string for the headingHtml,
and falls back to generating an empty heading tag.

--- a/manage_breast_screening/mammograms/jinja2/mammograms/confirm_identity.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/confirm_identity.jinja
@@ -21,7 +21,7 @@
 
   {{ special_appointment_banner(presented_appointment.special_appointment, show_change_link=presented_appointment.active) }}
 
-  {% call card({"headingHtml": "", "classes": "nhsuk-u-margin-bottom-4"}) %}
+  {% call card({"headingHtml": "<!-- no heading -->", "classes": "nhsuk-u-margin-bottom-4"}) %}
     {{ summaryList({
       "rows": [
         {
