--- a/manage_breast_screening/clinics/jinja2/clinics/show.jinja
+++ b/manage_breast_screening/clinics/jinja2/clinics/show.jinja
@@ -75,6 +75,7 @@
       </p>
     {% endset %}
     {% set actions_html %}
+      {% if presented_appointment.can_be_checked_in %}
       {{ check_in(
         presented_appointment,
         check_in_url=url(
@@ -86,6 +87,12 @@
         ),
         csrf_input=csrf_input
       ) }}
+      {% elif presented_appointment.can_be_started_by(request.user) %}
+        <form action="{{ url('mammograms:start_appointment', kwargs={'pk': presented_appointment.pk}) }}" method="post">
+          {{ csrf_input }}
+          <button class="app-button app-button--link">Start appointment</button>
+        </form>
+      {% endif %}
     {% endset %}
 
     {% do table_rows.append([
