display the history item on medical information page
This is a placeholder for now. We're not nearly handling cases where
there are no history items, or multiple, but they will show up.

I've removed the dummy link, because we will need one for each type of
medical information. We can deal with that when we have a form to link
to.

--- a/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
@@ -33,8 +33,10 @@
 {% endcall %}
 
 {% set medical_history_card_html %}
-  {% set breast_cancer_history_link %}
-  <a class="nhsuk-link" href="#">Enter breast cancer history</a>
+  {% set breast_cancer_history_html %}
+    {% for presented_item in presenter.breast_cancer_history %}
+      {{ summaryList(presented_item.summary_list_params) }}
+    {% endfor %}
   {% endset %}
   {% set non_cancerous_lump_diagnosis_link %}
   <a class="nhsuk-link" href="#">Enter non-cancerous lump diagnosis</a>
@@ -49,7 +51,7 @@
          "text": "Breast cancer history"
        },
        "value": {
-         "html": breast_cancer_history_link
+         "html": breast_cancer_history_html
        },
        "actions": {
           "items": []
