Added implanted_medical_device_history_item table.
Added demo data and added Implanted medical device history details to
the Medical history section of the Record medical information page.

--- a/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
@@ -38,6 +38,11 @@
       {{ summaryList(presented_item.summary_list_params) }}
     {% endfor %}
   {% endset %}
+  {% set implanted_medical_device_history_html %}
+    {% for presented_item in presenter.implanted_medical_device_history %}
+      {{ summaryList(presented_item.summary_list_params) }}
+    {% endfor %}
+  {% endset %}
   {% set non_cancerous_lump_diagnosis_link %}
   <a class="nhsuk-link" href="#">Enter non-cancerous lump diagnosis</a>
   {% endset %}
@@ -52,6 +57,17 @@
        },
        "value": {
          "html": breast_cancer_history_html
+       },
+       "actions": {
+          "items": []
+       }
+     },
+     {
+       "key": {
+         "text": "Implanted medical device history"
+       },
+       "value": {
+         "html": implanted_medical_device_history_html
        },
        "actions": {
           "items": []
