--- a/manage_breast_screening/clinics/jinja2/clinics/show.jinja
+++ b/manage_breast_screening/clinics/jinja2/clinics/show.jinja
@@ -69,6 +69,9 @@
       {{
         appointment_status(presented_appointment)
       }}
+      {% if presented_appointment.status_attribution %}
+        <span class="app-text-grey app-nowrap nhsuk-body-s nhsuk-u-margin-bottom-0">{{ presented_appointment.status_attribution }}</span>
+      {% endif %}
       <p class="nhsuk-u-margin-top-2 nhsuk-u-margin-bottom-0 app-u-nowrap">
         <a href="{{ url('mammograms:show_appointment', kwargs={"pk": presented_appointment.pk}) }}" class="nhsuk-link">
           View appointment <span class="nhsuk-u-visually-hidden"> for {{ presented_appointment.participant.full_name }}</span>
