show implant/augmentation history (placeholder html)

--- a/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
@@ -38,11 +38,19 @@
       {{ summaryList(presented_item.summary_list_params) }}
     {% endfor %}
   {% endset %}
+
   {% set implanted_medical_device_history_html %}
     {% for presented_item in presenter.implanted_medical_device_history %}
       {{ summaryList(presented_item.summary_list_params) }}
     {% endfor %}
   {% endset %}
+
+  {% set breast_augmentation_history_html %}
+    {% for presented_item in presenter.breast_augmentation_history %}
+      {{ summaryList(presented_item.summary_list_params) }}
+    {% endfor %}
+  {% endset %}
+
   {% set non_cancerous_lump_diagnosis_link %}
   <a class="nhsuk-link" href="#">Enter non-cancerous lump diagnosis</a>
   {% endset %}
@@ -68,6 +76,17 @@
        },
        "value": {
          "html": implanted_medical_device_history_html
+       },
+       "actions": {
+          "items": []
+       }
+     },
+     {
+      "key": {
+         "text": "Breast implants or augmentation"
+       },
+       "value": {
+         "html": breast_augmentation_history_html
        },
        "actions": {
           "items": []
