Present and display BenignLumpHistoryItems
- Add a BenignLumpHistoryItemPresenter
- Use it to render a basic summary of this history item on the medical
  information page

--- a/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
@@ -60,6 +60,11 @@
   {% set non_cancerous_lump_diagnosis_link %}
   <a class="nhsuk-link" href="#">Enter non-cancerous lump diagnosis</a>
   {% endset %}
+  {% set benign_lump_history_html %}
+    {% for presented_item in presenter.benign_lump_history %}
+      {{ summaryList(presented_item.summary_list_params) }}
+    {% endfor %}
+  {% endset %}
   {% set chest_procedures_link %}
   <a class="nhsuk-link" href="#">Enter other breast or chest procedures</a>
   {% endset %}
@@ -104,6 +109,17 @@
        },
        "value": {
          "html": other_procedure_history_html
+       },
+       "actions": {
+          "items": []
+       }
+     },
+     {
+       "key": {
+         "text": "Benign lump history"
+       },
+       "value": {
+         "html": benign_lump_history_html
        },
        "actions": {
           "items": []
