Page to add details of cyst
Added "Add details of cysts" page which can be
accessed from the "Record medical information" page.

--- a/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
@@ -68,6 +68,7 @@
     {% for presented_item in presenter.cyst_history %}
       {{ summaryList(presented_item.summary_list_params) }}
     {% endfor %}
+    <a href="{{ presenter.add_cyst_history_link.href }}" class="nhsuk-link nhsuk-link--no-visited-state">{{ presenter.add_cyst_history_link.text }}</a><br>
   {% endset %}
 
   {% set non_cancerous_lump_diagnosis_link %}
