--- a/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/medical_history/forms/breast_cancer_history_item_form.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/medical_history/forms/breast_cancer_history_item_form.jinja
@@ -1,8 +1,39 @@
 {% extends "layout-form.jinja" %}
 {% from "nhsuk/components/button/macro.jinja" import button %}
-{% from "nhsuk/components/fieldset/macro.jinja" import fieldset %}
+{% from "mammograms/medical_information/medical_history/forms/macros.jinja" import diagnosis_location_field %}
 
 {% block form %}
+
+  {{ diagnosis_location_field(form.diagnosis_location) }}
+
+  {{ form.diagnosis_year.as_field_group() }}
+
+  {# H2 hidden from AT as it's included in the fieldset legend of each set of radios #}
+  <h2 aria-hidden="true">What procedure have they had?</h2>
+  <div class="nhsuk-grid-row">
+    <div class="nhsuk-grid-column-one-half">
+      {% do form.right_breast_procedure.add_divider_after("MASTECTOMY_NO_TISSUE_REMAINING", "or") %}
+      {{ form.right_breast_procedure.as_field_group() }}
+    </div>
+    <div class="nhsuk-grid-column-one-half">
+      {% do form.left_breast_procedure.add_divider_after("MASTECTOMY_NO_TISSUE_REMAINING", "or") %}
+      {{ form.left_breast_procedure.as_field_group() }}
+    </div>
+  </div>
+
+  {# H2 hidden from AT as it's included in the fieldset legend of each set of checkboxes #}
+  <h2 aria-hidden="true">What other surgery have they had?</h2>
+
+  <div class="nhsuk-grid-row">
+    <div class="nhsuk-grid-column-one-half">
+      {% do form.right_breast_other_surgery.add_divider_after("SYMMETRISATION", "or") %}
+      {{ form.right_breast_other_surgery.as_field_group() }}
+    </div>
+    <div class="nhsuk-grid-column-one-half">
+      {% do form.left_breast_other_surgery.add_divider_after("SYMMETRISATION", "or") %}
+      {{ form.left_breast_other_surgery.as_field_group() }}
+    </div>
+  </div>
 
   <div class="nhsuk-button-group">
     {{ button({
