allow passing inputmode to CharField

--- a/manage_breast_screening/nhsuk_forms/jinja2/forms/input.jinja
+++ b/manage_breast_screening/nhsuk_forms/jinja2/forms/input.jinja
@@ -20,7 +20,8 @@
     "value": field.value() or "",
     "classes": unbound_field.classes if unbound_field.classes,
     "attributes": widget.attrs,
-    "type": widget.input_type
+    "type": widget.input_type,
+    "inputmode": unbound_field.inputmode
   } %}
   {% if field.errors %}
     {% set error_params = {
