Allow modified labels for screenreaders
There are many use cases where we would want to vary the label or legend
shown to screenreader users, by adding visually hidden text before or
after the main label.

This commit adds extra params to custom form fields so we can specify
this text in the same place we specify the labels normally, i.e. in the
form class. I've extended this to most of the common field types
(radios, checkboxes, textareas and inputs).

--- a/manage_breast_screening/nhsuk_forms/jinja2/forms/character-count.jinja
+++ b/manage_breast_screening/nhsuk_forms/jinja2/forms/character-count.jinja
@@ -1,9 +1,10 @@
 {% from "character-count/macro.jinja" import characterCount %}
+{% from "forms/label.jinja" import label_html %}
 {% set unbound_field = field.field %}
 {% set widget = unbound_field.widget %}
 {% set character_count_params = {
     "label": {
-      "text": field.label,
+      "html": label_html(field),
       "classes": unbound_field.label_classes if unbound_field.label_classes
     },
     "hint": {
