Amend service to send all reports in one email

--- a/manage_breast_screening/notifications/templates/report_emails/reports.html
+++ b/manage_breast_screening/notifications/templates/report_emails/reports.html
@@ -2,7 +2,7 @@
   <body>
     <p>Hello.</p>
     <p>
-      Attached to the email is the daily report for breast screening digital
+      Attached to the email are the daily reports for breast screening digital
       comms. For more information on the data in the report, please check the
       guidance here.
     </p>
