Page to add details of breast augmentation
Added "Add breast augmentation history" page which can be accessed
from the "Record medical information" page.

--- a/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
@@ -56,6 +56,7 @@
     {% for presented_item in presenter.breast_augmentation_history %}
       {{ summaryList(presented_item.summary_list_params) }}
     {% endfor %}
+    <a href="{{ presenter.add_breast_augmentation_history_link.href }}" class="nhsuk-link nhsuk-link--no-visited-state">{{ presenter.add_breast_augmentation_history_link.text }}</a><br>
   {% endset %}
 
   {% set other_procedure_history_html %}
