add param to mark options exclusive
The design system checkboxes component allows marking options as
exclusive, meaning they toggle all the other options off when selected.

We can support this using an extra param to the custom checkbox field.

--- a/manage_breast_screening/nhsuk_forms/jinja2/forms/checkboxes.jinja
+++ b/manage_breast_screening/nhsuk_forms/jinja2/forms/checkboxes.jinja
@@ -12,6 +12,7 @@
     "value": value,
     "text": text,
     "checked": value in (field.value() or []),
+    "exclusive": unbound_field.is_exclusive(value),
     "conditional": {
       "html": conditional_html
     } if conditional_html else undefined
